--- a/src/main/resources/templates/user_add.html
+++ b/src/main/resources/templates/user_add.html
@@ -27,7 +27,7 @@
             <label>角色</label>
             <input type="radio" name="role" value="1"/>超级管理员
             <input type="radio" name="role" value="2" checked/>普通管理员
-            <input type="text" class="form-control" name="role">
+            <!--<input type="text" class="form-control" name="role">-->
         </div>
         <div class="form-group">
             <label>昵称</label>
