--- a/src/main/resources/templates/user_update.html
+++ b/src/main/resources/templates/user_update.html
@@ -31,6 +31,11 @@
             <!--<input type="text" class="form-control" name="role">-->
         </div>
         <div class="form-group">
+            <label>状态</label>
+            <input type="radio" name="status" value="1" th:checked="|${user.status==1}|"/>正常
+            <input type="radio" name="status" value="0" th:checked="|${user.status==0}|"/>禁用
+        </div>
+        <div class="form-group">
             <label>昵称</label>
             <input type="text" class="form-control" name="nickName" th:value="${user.nickName}">
         </div>
