--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <div th:replace="header::common"></div>
+    <style>
+        .center {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+    </style>
 </head>
-<body>
+<body class="center">
     <a class="btn btn-primary "th:href="|/user/toAdd|">添加</a>
     <table class="table table-striped table-bordered table-hover table-condensed">
         <tr>
@@ -16,17 +22,25 @@
             <td>电话</td>
             <td>头像</td>
             <td>角色</td>
+            <td>状态</td>
             <td>删除</td>
             <td>编辑</td>
         </tr>
-        <tr th:each="user:${list}">
+        <tr th:each="user:${pageInfo.list}">
             <td th:text="${user.id}"></td>
             <td th:text="${user.name}"></td>
             <td th:text="${user.password}"></td>
             <td th:text="${user.email}"></td>
             <td th:text="${user.phone}"></td>
             <td><img th:src="|/pic/${user.image}|" width="40px" height="40px"></td>
-            <td th:text="${user.role}"></td>
+            <td>
+                <span class="label label-warning" th:if="${user.role==1}">超级管理员</span>
+                <span class="label label-success" th:if="${user.role==2}">普通管理员</span>
+            </td>
+            <td>
+                <span class="label label-warning" th:if="${user.status==0}">禁用</span>
+                <span class="label label-success" th:if="${user.status==1}">正常</span>
+            </td>
             <!--<td><a class="btn btn-danger" th:href="|/user/deleteById?id=${user.id}|">删除</a></td>-->
             <td><a class="btn btn-danger" th:onclick="|deleteById(${user.id})|">删除</a></td>
 
@@ -34,6 +48,25 @@
         </tr>
 
     </table>
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li>
+                <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <script>
         function deleteById(id) {
