--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
 						<dl class="layui-nav-child">
 							<dd>
 								<a href="javascript:;"
-								   data-url="/user/selectByPage?pageNo=1&pageSize=5"
+								   data-url="/user/selectByPage"
 								   class="site-demo-active">管理员管理</a>
 							</dd>
 							<dd>
