--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -50,19 +50,55 @@
     </table>
     <nav aria-label="Page navigation">
         <ul class="pagination">
-            <li>
-                <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
+            <!--上一页-->
+            <th:block th:if="${pageInfo.pageNo==1}">
+                <li class="disabled">
+                    <a href="#" aria-label="Previous">
+                        <!--&laquo为向右箭头，标志下一页，等同于“下一页”-->
+                        <!--<span aria-hidden="true">&laquo;</span>-->
+                        <span aria-hidden="true">上一页</span>
+                    </a>
+                </li>
+            </th:block>
+            <th:block th:if="${pageInfo.pageNo!=1}">
+                <li>
+                    <a th:href="|/user/selectByPage?pageNo=${pageInfo.pageNo-1}|" aria-label="Previous">
+                        <!--&laquo为向右箭头，标志下一页，等同于“下一页”-->
+                        <!--<span aria-hidden="true">&laquo;</span>-->
+                        <span aria-hidden="true">上一页</span>
+                    </a>
+                </li>
+            </th:block>
+
+            <li th:class="${pageInfo.pageNo==page}?active:''" th:each="page:${#numbers.sequence(1,pageInfo.totalPage)}">
+                <!--<a th:href="|/user/selectByPage?pageNo=${page}|" th:text="${page}"></a>-->
+                <th:block th:if="${pageInfo.pageNo==page}">
+                    <a href="#" th:text="${page}"></a>
+                </th:block>
+                <th:block th:if="${pageInfo.pageNo!=page}">
+                    <a th:href="|/user/selectByPage?pageNo=${page}|" th:text="${page}"></a>
+                </th:block>
             </li>
-            <li th:each="page:${#numbers.sequence(1,pageInfo.totalPage)}">
-                <a th:href="|/user/selectByPage?pageNo=${page}|" th:text="${page}"></a>
-            </li>
-            <li>
-                <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
+            <!--下一页-->
+            <!--&raquo为向右箭头，标志下一页，等同于“下一页”-->
+            <th:block th:if="${pageInfo.pageNo==pageInfo.getTotalPage()}">
+                <li class="disabled">
+                    <a href="#" aria-label="Next">
+                        <!--<span aria-hidden="true">&raquo;</span>-->
+                        <span aria-hidden="true">下一页</span>
+                    </a>
+                </li>
+            </th:block>
+            <th:block th:if="${pageInfo.pageNo!=pageInfo.getTotalPage()}">
+                <li>
+                    <a th:href="|/user/selectByPage?pageNo=${pageInfo.pageNo+1}|" aria-label="Next">
+                        <!--&raquo为向右箭头，标志下一页，等同于“下一页”-->
+                        <!--<span aria-hidden="true">&raquo;</span>-->
+                        <span aria-hidden="true">下一页</span>
+                    </a>
+                </li>
+            </th:block>
+
         </ul>
     </nav>
 
