--- a/src/main/resources/templates/echarts.html
+++ b/src/main/resources/templates/echarts.html
@@ -13,30 +13,48 @@
         // 基于准备好的dom，初始化echarts实例
         var myChart = echarts.init(document.getElementById('main'));
 
-        // 指定图表的配置项和数据
-        var option = {
-            title: {
-                text: 'ECharts 入门示例'
-            },
-            tooltip: {},
-            legend: {
-                data: ['销量']
-            },
-            xAxis: {
-                data: ['衬衫', '羊毛衫', '雪纺衫', '裤子', '高跟鞋', '袜子']
-            },
-            yAxis: {},
-            series: [
-                {
-                    name: '销量',
-                    type: 'bar',
-                    data: [5, 20, 36, 10, 10, 20]
-                }
-            ]
-        };
+        $.post(
+            '/echarts/selectBlogTypeCount',
+            function (result){
+                console.log(result);
 
-        // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+                // [{name: 'Java', value: '15'},{name: 'UI', value: '2'}]
+                let xArray = new Array();
+                let yArray = new Array();
+                let data = result.data;
+                for(let i = 0; i < data.length; i++) {
+                    xArray.push(data[i].name);
+                    yArray.push(data[i].value);
+                }
+                // 指定图表的配置项和数据
+                var option = {
+                    title: {
+                        text: 'ECharts 入门示例'
+                    },
+                    tooltip: {},
+                    legend: {
+                        data: ['数量']
+                    },
+                    xAxis: {
+                        data: xArray
+                    },
+                    yAxis: {},
+                    series: [
+                        {
+                            name: '数量',
+                            type: 'bar',
+                            data: yArray
+                        }
+                    ]
+                };
+                // 使用刚指定的配置项和数据显示图表。
+                myChart.setOption(option);
+            },
+            'json'
+        );
+
+
+
     </script>
 </body>
 </html>
