--- a/src/main/resources/templates/echarts.html
+++ b/src/main/resources/templates/echarts.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
-    <div id="main" style="width: 600px;height:400px;"></div>
+    <div id="main1" style="width: 600px;height:400px;"></div>
+    <div id="main2" style="width: 600px;height:400px;"></div>
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('main'));
+        var myChart1 = echarts.init(document.getElementById('main1'));
+        var myChart2 = echarts.init(document.getElementById('main2'));
 
         $.post(
             '/echarts/selectBlogTypeCount',
@@ -27,9 +29,10 @@
                     yArray.push(data[i].value);
                 }
                 // 指定图表的配置项和数据
-                var option = {
+                // 柱状图
+                let option1 = {
                     title: {
-                        text: 'ECharts 入门示例'
+                        text: '博客分类统计'
                     },
                     tooltip: {},
                     legend: {
@@ -48,7 +51,41 @@
                     ]
                 };
                 // 使用刚指定的配置项和数据显示图表。
-                myChart.setOption(option);
+                myChart1.setOption(option1);
+                // 指定图表的配置项和数据
+                // 饼状图
+                let option2 = {
+                    title: {
+                        text: '博客分类统计',
+                        subtext: '',
+                        left: 'center'
+                    },
+                    tooltip: {
+                        trigger: 'item'
+                    },
+                    legend: {
+                        orient: 'vertical',
+                        left: 'left'
+                    },
+                    series: [
+                        {
+                            name: '数量',
+                            type: 'pie',
+                            radius: '50%',
+                            data: result.data,
+                            emphasis: {
+                                itemStyle: {
+                                    shadowBlur: 10,
+                                    shadowOffsetX: 0,
+                                    shadowColor: 'rgba(0, 0, 0, 0.5)'
+                                }
+                            }
+                        }
+                    ]
+                };
+                // 使用刚指定的配置项和数据显示图表。
+                myChart2.setOption(option2);
+
             },
             'json'
         );
