--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 			<ul class="layui-nav layui-layout-left">   </ul>
 			<ul class="layui-nav layui-layout-right">
 				<li class="layui-nav-item">
-				    <!--<a href="javascript:;" th:text="|用户${session.user.username}|"></a>-->
+				    <a href="javascript:;" th:text="|用户${session.user.name}|"></a>
 					<dl class="layui-nav-child">
 						<dd>
 							<a href="javascript:openUser()">基本资料</a>
