--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -9,13 +9,25 @@
             padding-left: 10px;
             padding-right: 10px;
         }
+        .pagination{
+            display: inline-block;
+            padding-left: 0px;
+            margin: 0px 0px;
+            border-radius: 4px;
+        }
+        .table{
+            width: 100%;
+            max-width: 100%;
+            margin-bottom: 10px;
+            margin-top: 3px;
+        }
     </style>
 </head>
 <body class="center">
     <a class="btn btn-sm btn-primary "th:href="|/user/toAdd|">添加</a>
     <a class="btn btn-sm btn-danger "onclick="deleteAll()">批量删除</a>
     <table class="table table-striped table-bordered table-hover table-condensed">
-        <tr>
+        <tr class="success">
             <td><input type="checkbox" id="checkAll"/></td>
             <td>ID</td>
             <td>名字</td>
@@ -25,8 +37,7 @@
             <td>头像</td>
             <td>角色</td>
             <td>状态</td>
-            <td>删除</td>
-            <td>编辑</td>
+            <td>操作</td>
         </tr>
         <tr th:each="user:${pageInfo.list}">
             <td><input type="checkbox" th:value="${user.id}" class="cb"/></td>
@@ -45,14 +56,15 @@
                 <span class="label label-success" th:if="${user.status==1}">正常</span>
             </td>
             <!--<td><a class="btn btn-danger" th:href="|/user/deleteById?id=${user.id}|">删除</a></td>-->
-            <td><a class="btn btn-danger" th:onclick="|deleteById(${user.id})|">删除</a></td>
-
-            <td><a class="btn btn-primary" th:href="|/user/toUpdate?id=${user.id}|">编辑</a></td>
+            <td>
+                <a class="btn btn-danger" th:onclick="|deleteById(${user.id})|">删除</a>
+                <a class="btn btn-primary" th:href="|/user/toUpdate?id=${user.id}|">编辑</a>
+            </td>
         </tr>
 
     </table>
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
+    <nav th:if="${pageInfo.totalPage>=1}" aria-label="Page navigation">
+        <ul class="pagination pagination-sm">
             <!--上一页-->
             <th:block th:if="${pageInfo.pageNo==1}">
                 <li class="disabled">
@@ -149,7 +161,10 @@
                     array.push($(this).val());
                 })
                 console.log(array);
-
+                if(array.length==0){
+                    mylayer.errorMsg('至少选择一个!');
+                    return;
+                }
 
                 location.href = '/user/deleteAll?ids=' + array;
             });
