--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,6 +48,11 @@
 								data-url="/blog/selectByPage"
 								class="site-demo-active">博客管理</a>
 							</dd>
+							<dd>
+								<a href="javascript:;"
+								   data-url="/blogType/selectByPage"
+								   class="site-demo-active">博客分类管理</a>
+							</dd>
 							<dd th:if="${session.user?.role==1}">
 								<a href="javascript:;"
 								   data-url="/echarts/toECharts"
