--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -37,6 +37,7 @@
             <td>头像</td>
             <td>角色</td>
             <td>状态</td>
+            <td>更新时间</td>
             <td>操作</td>
         </tr>
         <tr th:each="user:${pageInfo.list}">
@@ -55,6 +56,7 @@
                 <span class="label label-warning" th:if="${user.status==0}">禁用</span>
                 <span class="label label-success" th:if="${user.status==1}">正常</span>
             </td>
+            <td th:text="${#dates.format(user.gmtModified,'yyyy-MM-dd hh:mm')}"></td>
             <!--<td><a class="btn btn-danger" th:href="|/user/deleteById?id=${user.id}|">删除</a></td>-->
             <td>
                 <a class="btn btn-danger" th:onclick="|deleteById(${user.id})|">删除</a>
