--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,26 +38,41 @@
 					<li class="layui-nav-item layui-nav-itemed">
 					    <a href="javascript:;">信息维护</a>
 						<dl class="layui-nav-child">
-							<dd>
+							<!--<dd>-->
+							<!--	<a href="javascript:;"-->
+							<!--	   data-url="/user/selectByPage"-->
+							<!--	   class="site-demo-active">管理员管理</a>-->
+							<!--</dd>-->
+							<!--<dd>-->
+							<!--	<a href="javascript:;" -->
+							<!--	data-url="/blog/selectByPage"-->
+							<!--	class="site-demo-active">博客管理</a>-->
+							<!--</dd>-->
+							<!--<dd>-->
+							<!--	<a href="javascript:;"-->
+							<!--	   data-url="/blogType/selectByPage"-->
+							<!--	   class="site-demo-active">博客分类管理</a>-->
+							<!--</dd>-->
+							<!--<dd th:if="${session.user?.role==1}">-->
+							<!--	<a href="javascript:;"-->
+							<!--	   data-url="/echarts/toECharts"-->
+							<!--	   class="site-demo-active">统计图表</a>-->
+							<!--</dd>-->
+							<!--<dd th:if="${session.user?.role==1}">-->
+							<!--	<a href="javascript:;"-->
+							<!--	   data-url="/auth/selectByPage"-->
+							<!--	   class="site-demo-active">权限管理</a>-->
+							<!--</dd>-->
+
+
+							<!--根据权限表里内容自动获取-->
+							<dd th:each="auth:${list}">
 								<a href="javascript:;"
-								   data-url="/user/selectByPage"
+								   th:data-url="${auth.path}"
+								   th:text="${auth.name}"
 								   class="site-demo-active">管理员管理</a>
 							</dd>
-							<dd>
-								<a href="javascript:;" 
-								data-url="/blog/selectByPage"
-								class="site-demo-active">博客管理</a>
-							</dd>
-							<dd>
-								<a href="javascript:;"
-								   data-url="/blogType/selectByPage"
-								   class="site-demo-active">博客分类管理</a>
-							</dd>
-							<dd th:if="${session.user?.role==1}">
-								<a href="javascript:;"
-								   data-url="/echarts/toECharts"
-								   class="site-demo-active">统计图表</a>
-							</dd>
+
 
 						</dl>
 					</li>
