--- a/src/main/resources/templates/auth/update.html
+++ b/src/main/resources/templates/auth/update.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <div th:replace="header::common"></div>
     <script type="text/javascript" th:src="@{/static/kindeditor/kindeditor.js}"></script>
+    <link rel="stylesheet" th:href="@{/static/layui/css/layui.css}">
     <style>
         .center{
             width: 1000px;
@@ -26,10 +27,16 @@
         </div>
         <div class="form-group">
             <label>角色</label>
-            <select class="form-control" name="role">
-                <option value="1">超级管理员</option>
-                <option value="2">普通管理员</option>
+            <select class="form-control" name="role" th:value="${auth.role}">
+                <option value="1" th:selected="${auth.role==1}">超级管理员</option>
+                <option value="2" th:selected="${auth.role==2}">普通管理员</option>
             </select>
+        </div>
+
+        <div class="form-group">
+            <label>状态</label>
+            <input type="radio" name="status" value="1" th:checked="|${auth.status==1}|"/>正常
+            <input type="radio" name="status" value="0" th:checked="|${auth.status==0}|"/>禁用
         </div>
         <input class="btn btn-lg btn-primary btn-sm" type="submit" value="修改">
     </form>
